my-apps/copyparty/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: copyparty
  namespace: copyparty
spec:
  parentRefs:
  - name: gateway-internal
    namespace: gateway
    sectionName: https
  hostnames:
  - "copyparty.saleem.us"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: copyparty
      port: 3923
